force-app/main/default/objects/LoanObject__c/LoanObject__c.object-meta.xml
<CustomObject>
    <label>LoanObject</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>LoanObject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LoanObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>