force-app/main/default/objects/LoanObject__c/fields/LoanAmount__c.field-meta.xml
<CustomField>
    <fullName>LoanAmount__c</fullName>
    <label>LoanAmount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>