force-app/main/default/objects/LoanObject__c/fields/LoanApplicant__c.field-meta.xml
<CustomField>
    <fullName>LoanApplicant__c</fullName>
    <label>LoanApplicant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>