force-app/main/default/objects/LoanObject__c/fields/LoanDesc__c.field-meta.xml
<CustomField>
    <fullName>LoanDesc__c</fullName>
    <label>LoanDesc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>