force-app/main/default/objects/LoanObject__c/fields/LoanStatus__c.field-meta.xml
<CustomField>
    <fullName>LoanStatus__c</fullName>
    <label>LoanStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>