force-app/main/default/objects/LoanObject__c/fields/LoanType__c.field-meta.xml
<CustomField>
    <fullName>LoanType__c</fullName>
    <label>LoanType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirming</fullName>
            </value>
            <value>
                <fullName>NonConfirming</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>