force-app/main/default/objects/LoanObject__c/fields/LoanTypeDesc__c.field-meta.xml
<CustomField>
    <fullName>LoanTypeDesc__c</fullName>
    <label>LoanTypeDesc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>